Fix #41: Title hidden behind navigation bar when jumping to anchor in FAQ

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -257,5 +257,14 @@ a {
         margin-top: 0.5em;
         margin-bottom: 1em;
         font-size: 1.3em;
+
+        &:before {
+            content: '';
+            display: block;
+            position: relative;
+            width: 0;
+            height: 5em;
+            margin-top: -5em
+        }
     }
 }
